--- a/trainer.ipynb
+++ b/trainer.ipynb
@@ -1415,8 +1415,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='0' class='' max='5', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      0.00% [0/5 00:00<00:00]\n",
+       "      <progress value='1' class='' max='5', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      20.00% [1/5 03:13<12:55]\n",
        "    </div>\n",
        "    \n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1430,6 +1430,13 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1.389209</td>\n",
+       "      <td>1.239233</td>\n",
+       "      <td>0.728501</td>\n",
+       "      <td>03:13</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>\n",
        "\n",
@@ -1446,8 +1453,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='32' class='' max='407', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      7.86% [32/407 00:14<02:50 2.4533]\n",
+       "      <progress value='76' class='' max='407', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      18.67% [76/407 00:33<02:27 1.1361]\n",
        "    </div>\n",
        "    "
       ],
@@ -1487,7 +1494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fit_one_cycle(5, slice(1e-7, lr/5))"
+    "learn.fit_one_cycle(2, slice(1e-5, lr/5))"
    ]
   },
   {
@@ -1509,13 +1516,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You won't really know how you're going until you submit to Kaggle, since the leaderboard isn't using the same subset as we have for training. But as a guide, 50th place (out of 938 teams) on the private leaderboard was a score of `0.930`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1528,7 +1528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validation"
+    "## Preditctions on Test Set"
    ]
   },
   {
